Fixed 404 page off center

--- a/style.css
+++ b/style.css
@@ -13,12 +13,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 
-}
-
-/* Prevent blocking clicks on background */
-html, body {
+	/* Prevent blocking clicks on background */
+	position: relative;
     z-index: -100;
-    position: relative;
 }
 
 a {
@@ -459,4 +456,8 @@ footer {
 }
 .pad-above {
     padding-top: 15px;
+}
+
+body.not-found {
+	position: static;
 }
